[package]
name = "mailpeep"
version = "0.1.0"
authors = ["72nd <msg@frg72.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
lettre = "0.9"
lettre_email = "0.9"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8"
